fix(dropdown,icon,popup): don't create a inline or a block box

--- a/src/components/popup/popup.css
+++ b/src/components/popup/popup.css
@@ -3,6 +3,7 @@
   --popup-font-black: var(--leu-font-family-black);
 
   font-family: var(--popup-font-regular);
+  display: contents;
 }
 
 .popup {
