--- a/src/components/pagination/pagination.css
+++ b/src/components/pagination/pagination.css
@@ -1,7 +1,7 @@
 :host {
   margin-top: 16px;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   font-family: var(--leu-font-family-regular);
 }
 
