--- a/src/components/accordion/accordion.css
+++ b/src/components/accordion/accordion.css
@@ -27,7 +27,7 @@
   width: 100%;
   background: none;
   padding: 1rem 0;
-  margin: none;
+  margin: 0;
   cursor: pointer;
 
   border: none;
@@ -132,7 +132,6 @@ slot[name="content"] {
 }
 
 .divider {
-
   width: 100%;
   height: 1px;
   margin: 0;
@@ -140,7 +139,9 @@ slot[name="content"] {
   border: none;
   background-color: var(--divider-color);
 
-  transition: transform var(--transition), background-color var(--transition);
+  transition:
+    transform var(--transition),
+    background-color var(--transition);
 }
 
 :host(:not([open])) .heading:is(:hover, :focus-visible) ~ .divider {
