--- a/src/components/visualization/chart-wrapper.css
+++ b/src/components/visualization/chart-wrapper.css
@@ -1,31 +1,30 @@
 @import url("../../styles/custom-media.css");
 
-:host {
-  --visualization-font-regular: var(--leu-font-family-regular);
-  --visualization-font-black: var(--leu-font-family-black);
-
-  font-family: var(--visualization-font-regular);
-}
-
 .title::slotted(h2) {
-  font: var(--leu-t-curve-medium-black-font);
-  margin-bottom: 0.75rem;
+  font: var(--leu-t-curve-large-black-font);
+  margin: 0 0 0.75rem;
 
   @media (--viewport-medium) {
-    margin-bottom: 1.25rem;
+    margin: 0 0 1.25rem;
   }
 
   @media (--viewport-xlarge) {
-    margin-bottom: 1.5rem;
+    margin: 0 0 1.5rem;
   }
 }
 
 .title::slotted(h3) {
-  margin-bottom: 0.5rem;
+  font: var(--leu-t-curve-medium-black-font);
+  margin: 0 0 0.5rem;
+}
+
+.title::slotted(h4) {
+  font: var(--leu-t-curve-regular-black-font);
+  margin: 0 0 0.5rem;
 }
 
 .description,
-.visualization {
+.chart {
   display: block;
   margin-bottom: 0.75rem;
 
