feat(chart-wrapper): use figure elements

--- a/src/components/visualization/chart-wrapper.css
+++ b/src/components/visualization/chart-wrapper.css
@@ -42,7 +42,7 @@
   color: var(--leu-color-black-60);
 }
 
-.legend {
+.caption {
   font: var(--leu-t-curve-tiny-regular-font);
   color: var(--leu-color-black-60);
 }
