--- a/src/components/visualization/chart-wrapper.css
+++ b/src/components/visualization/chart-wrapper.css
@@ -62,3 +62,17 @@
   display: block;
   margin-left: -0.5rem;
 }
+
+.chart-container {
+  position: relative;
+}
+
+.spinner-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-content: center;
+}
