feat(message): add new message component

--- a/src/styles/custom-media.css
+++ b/src/styles/custom-media.css
@@ -1,4 +1,5 @@
 @custom-media --viewport-small (min-width: 400px);
+@custom-media --viewport-small-max (max-width: 599px);
 @custom-media --viewport-regular (min-width: 600px);
 @custom-media --viewport-medium (min-width: 840px);
 @custom-media --viewport-large (min-width: 1024px);
