feat(button): add href attribute so that the component can be used as a link
refactor(button): remove  property

BREAKING CHANGE: The  property is removed. The underlying <button> or <a> element now takes
up the whole width of the host element. The width of the host element can be controlled with css
from the outside. The only exception are configurations that only show an icon and therefor should
be displayed with an aspect ratio of 1.

--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -5,16 +5,18 @@
 .button {
   font-family: var(--leu-font-family-black);
   text-align: center;
+  text-decoration: none;
   appearance: none;
   transition: background 0.1s ease;
   cursor: pointer;
   border: none;
   border-radius: 2px;
 
-  max-width: 100%;
-  display: flex;
+  display: inline-flex;
+  justify-content: center;
   align-items: center;
   column-gap: 8px;
+  width: 100%;
 }
 
 .content {
@@ -41,9 +43,9 @@
   outline: 2px solid var(--leu-color-black-0);
 }
 
-.button--fluid {
-  width: 100%;
-  justify-content: center;
+.button--icon-only {
+  aspect-ratio: 1;
+  width: unset;
 }
 
 /* size - regular */
