--- a/src/components/range/range.css
+++ b/src/components/range/range.css
@@ -35,7 +35,9 @@
   --range-value-color: var(--range-value-color-disabled);
 }
 
-/***************************   */
+.container {
+  position: relative;
+}
 
 .label {
   display: inline-block;
@@ -79,6 +81,8 @@
 
 .inputs {
   position: relative;
+  z-index: 1;
+  height: var(--range-thumb-diameter);
 }
 
 .range {
@@ -188,4 +192,36 @@
 
 .range--ghost::-webkit-slider-runnable-track {
   background: transparent;
+}
+
+/* Ticks */
+
+.ticks {
+  position: absolute;
+  inset-block-start: calc(
+    var(--range-thumb-diameter) / 2 + var(--range-track-height)
+  );
+  inset-inline: calc(var(--range-thumb-diameter) / 2);
+}
+
+.tick {
+  z-index: -1;
+  position: absolute;
+  top: 50%;
+  width: 2px;
+  height: 0.5rem;
+  background-color: var(--range-track-background-color);
+  transform: translateY(-50%);
+}
+
+.tick-labels {
+  display: flex;
+  justify-content: space-between;
+  color: var(--leu-color-black-60);
+  font: var(--leu-t-tiny-regular-font);
+  margin-top: 0.25rem;
+}
+
+.tick-label--max {
+  text-align: right;
 }
