feat(form-controls): implement mixin for form associated elements
use them for file-input and checkbox.

--- a/src/components/checkbox/checkbox.css
+++ b/src/components/checkbox/checkbox.css
@@ -67,6 +67,10 @@
   cursor: not-allowed;
 }
 
+.checkbox:required + .label::after {
+  content: "*";
+}
+
 .icon {
   position: absolute;
   display: block;
